--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?va0qkb');
-  src:  url('fonts/icomoon.eot?va0qkb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?va0qkb') format('truetype'),
-    url('fonts/icomoon.woff?va0qkb') format('woff'),
-    url('fonts/icomoon.svg?va0qkb#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?1zejt9');
+  src:  url('fonts/icomoon.eot?1zejt9#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?1zejt9') format('truetype'),
+    url('fonts/icomoon.woff?1zejt9') format('woff'),
+    url('fonts/icomoon.svg?1zejt9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-clock1:before {
+  content: "\e903";
+}
+.icon-stop-watch:before {
+  content: "\e900";
+}
+.icon-stop-watch1:before {
+  content: "\e901";
+}
 .icon-home3:before {
   content: "\e902";
 }
