--- a/index_medias.css
+++ b/index_medias.css
@@ -41,7 +41,7 @@ align-items: center;
 justify-content: space-evenly;
 background:rgb(39, 39, 196,.9);
 width:50%;
-height:100%;
+height:100vh;
 transform:translate(-200%)
     }
 .ver_cinta{
@@ -137,7 +137,7 @@ transform:translate(-0%)
 @media(max-width:500px){
 
     .cinta{
-        height:70px
+        height:100%
     }
     .log{
         top:-20px;
@@ -301,6 +301,7 @@ transform:translate(-0%)
 /* background:red; */
         width:100%;
         z-index:3000;
+        height:100vh
     }
     .cinta1  li {
         height:20px;
