--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body{
     padding:0;
     max-width: 1000px;
     background:transparent;
+    font-style: italic;
     /* overflow: hidden; */
 }
 .guacho2{
@@ -118,19 +119,24 @@ position:relative;
     list-style:none;
     margin-right:.2rem;
     height:20px;
-    line-height:15px;
+    line-height:20px;
     padding: .2rem ;
     transition:.3s;
-    border-radius:10px
+    border-radius:10px;
+    /* background:rgb(195, 195, 206) */
+
 }
 .cinta1 li:hover{
-    background:rgb(68, 68, 107)
+    background:rgb(8, 8, 182)
 }
 .cinta1 li a{
     text-decoration: none;
     color:white;
     font-size:20px;
-    font-weight:bold
+    font-weight:lighter;
+    font-style: italic;
+    /* background:#51515f; */
+    
 }
 
 .buscar{
@@ -460,11 +466,74 @@ font-style: italic;
 .banner_text a{
     color:blue
 }
+/* **************************************EXPERIENCIA*************************** */
+
+.cont_expe{
+    background-image: linear-gradient(rgba(236, 236, 245, 0.7)0%, rgb(9, 9, 194, 0.7)100%),
+    url(proyecto/monitor.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-origin: border-box;
+    width:100%;
+    margin:10px auto;
+    padding:5px 5px
+}
+.cont_expe h1{
+    background-color: rgb(244, 248, 252,.7);
+    width:100%;
+    margin: 5px auto;
+    padding:5px;
+    text-align:center;
+    font-size:20px
+}
+.cont_expe p{
+    background-color: rgba(233, 240, 248, 0.5);
+    width:80%;
+    margin:5px auto;
+    padding:5px;
+    font-size:18px
+    /* text-align: center; */
+}
+.experiencia{
+    /* background:rgb(235, 200, 188); */
+    width:98%;
+    margin:0 auto;
+    display:flex;
+    /* flex-direction: column; */
+    justify-content: space-evenly;
+}
+.experiencia_img{
+    /* border: solid black 1px; */
+    height:150px;
+    width: 150px;
+    overflow:hidden
+}
+.experiencia_img h2{
+    font-size:20px;
+    background-color: rgba(233, 240, 248, 0.5);
+
+}
+
+.experiencia_img img{
+    width:100%;
+    /* margin:1px 5%; */
+    height:60%
+
+}
+.experiencia_img h2{
+    text-align:center;
+    /* background-color: darkgoldenrod; */
+    margin:0
+
+}
+
 /* *******************************LALA****************************** */
 .contenedor_lala{
     /* height:800px; */
     width:90%;
-    background:#e1eef7;
+    background:#f1f4f7;
     margin:5px auto;
     border-radius:5px
 }
